--- a/src/components/ChooseUs/ChooseUs.css
+++ b/src/components/ChooseUs/ChooseUs.css
@@ -13,7 +13,7 @@
     align-items: center;
 }
 .our-quality h4{
-    color: #638f6c;
+    color: #F9B88C;
 }
 /* mobile responsive */
 @media screen and (max-width:576px) {
